# handler/user.go
@@ -51,11 +51,12 @@ func DoSignUp(data goutil.Map) (goutil.Map, error) {
 }
 
 // @Summary Login generates the authentication token
-// @Produce  json
-// @Param username body string true "Username"
-// @Param password body string true "Password"
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param user body model.Tag true "user info for login"
 // @Success 200 {string} json "{"code":0,"message":"OK","data":{"token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MjgwMTY5MjIsImlkIjowLCJuYmYiOjE1MjgwMTY5MjIsInVzZXJuYW1lIjoiYWRtaW4ifQ.LjxrK9DuAwAzUD8-9v43NzWBN7HXsSLfebw92DKd1JQ"}}"
-// @Router /login [post]
+// @Router /api/v1/pub/login [post]
 func Login(c *gin.Context) {
 	var data goutil.Map
 	if err := c.Bind(&data); err != nil {
